crates/cfg-zkvm-macro/tests/fail/01_expressions_statements.stderr
error[E0658]: attributes on expressions are experimental
  --> tests/fail/01_expressions_statements.rs:17:13
   |
17 |     let y = #[cfg_zkvm(sp1)]
   |             ^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information

error[E0658]: custom attributes cannot be applied to statements
  --> tests/fail/01_expressions_statements.rs:13:5
   |
13 |     #[cfg_zkvm(risc0)]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #54727 <https://github.com/rust-lang/rust/issues/54727> for more information

error[E0658]: custom attributes cannot be applied to expressions
  --> tests/fail/01_expressions_statements.rs:17:13
   |
17 |     let y = #[cfg_zkvm(sp1)]
   |             ^^^^^^^^^^^^^^^^
   |
   = note: see issue #54727 <https://github.com/rust-lang/rust/issues/54727> for more information

error[E0658]: attributes on expressions are experimental
  --> tests/fail/01_expressions_statements.rs:17:13
   |
17 |     let y = #[cfg_zkvm(sp1)]
   |             ^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = note: this error originates in the attribute macro `cfg_zkvm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: removing an expression is not supported in this position
  --> tests/fail/01_expressions_statements.rs:17:13
   |
17 |     let y = #[cfg_zkvm(sp1)]
   |             ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `cfg_zkvm` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition name: `zkvm_pico`
  --> tests/fail/01_expressions_statements.rs:13:5
   |
13 |     #[cfg_zkvm(risc0)]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: expected names are: `docsrs`, `feature`, and `test` and 31 more
   = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `cfg_zkvm` crate for guidance on how handle this unexpected cfg
   = help: the attribute macro `cfg_zkvm` may come from an old version of the `cfg_zkvm_macro` crate, try updating your dependency with `cargo update -p cfg_zkvm_macro`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default
   = note: this warning originates in the attribute macro `cfg_zkvm` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `succinct`
  --> tests/fail/01_expressions_statements.rs:17:13
   |
17 |     let y = #[cfg_zkvm(sp1)]
   |             ^^^^^^^^^^^^^^^^
   |
   = note: expected values for `target_vendor` are: `amd`, `apple`, `espressif`, `fortanix`, `ibm`, `kmc`, `mti`, `nintendo`, `nvidia`, `openwrt`, `pc`, `risc0`, `sony`, `sun`, `unikraft`, `unknown`, `uwp`, `vex`, `win7`, and `wrs`
   = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `cfg_zkvm` crate for guidance on how handle this unexpected cfg
   = help: the attribute macro `cfg_zkvm` may come from an old version of the `cfg_zkvm_macro` crate, try updating your dependency with `cargo update -p cfg_zkvm_macro`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: this warning originates in the attribute macro `cfg_zkvm` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `y`
  --> tests/fail/01_expressions_statements.rs:17:9
   |
17 |     let y = #[cfg_zkvm(sp1)]
   |         ^ help: if this is intentional, prefix it with an underscore: `_y`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
